log
Fri, Mar 28, 2025  8:36:26 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025  8:52:58 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e5542a8
Fri, Mar 28, 2025 10:09:24 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8d6fb61
Fri, Mar 28, 2025 10:12:32 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f6623f4
Fri, Mar 28, 2025 10:14:36 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
00f2260
Fri, Mar 28, 2025 10:16:26 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
be44c0e
Fri, Mar 28, 2025 10:21:29 PM: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  10|2
total_score: 45/70
897a4ae
Fri, Mar 28, 2025 10:26:52 PM: 
 list.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  11|1
total_score: 55/70
8d023ce
Fri, Mar 28, 2025 10:33:36 PM: 
 list.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:122:12: error: unused variable 'data' [-Werror=unused-variable]
     void * data = remover->data;
            ^~~~
list.c:147:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e363670
Fri, Mar 28, 2025 10:34:23 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
25e744b
Fri, Mar 28, 2025 10:36:05 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
05de3fe
